[project]
name = "snow-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Steven Rudenko", email = "srudenko@ncl.com" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
snow-docs = "snow_docs:app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"
